# setlistfy-agent

./: .cache  .gitignore  README.md  azure.yaml  package-lock.json  package.json
.devcontainer/: devcontainer.json  init.sh
.github/: copilot-instructions.md
docs/: APPLICATION_INSIGHTS.md  CORRELATION_ID_IMPLEMENTATION.md  OPENTELEMETRY_SETUP.md  PARENT_CHILD_RELATIONSHIPS.md
hooks/: gen_mcp_json.sh
infra/: main.bicep  main.parameters.json
infra/modules/: ai-foundry-project.bicep  ai-foundry.bicep  api-management.bicep  api-mgt-oauth.bicep  api.bicep  app-insights.bicep  bing-search.bicep  log-analytics-workspace.bicep  mcp-container-app.bicep  nvkv.bicep  user_portal_role.bicep
infra/modules/apim/v1/: api.bicep
scripts/: deploy_with_telemetry.sh  get_deployments.py  test_app_insights.py  test_correlation_id.py  test_parent_child_relations.py  update_phi4_deployment.py  validate_parent_child.py
src/apim/: openapi-setlistfm.json  policy-setlistfm.xml  policy-setlistfm_app.xml  request.sh  response.json  token.txt
src/apim/oauth-3rd-party/: README.md  bicep_parameters.json  gen_bicep_configuraiton.py  my_bicep_parameters.bicepparam  my_bicep_parameters.json  spotify_api.xml
src/apim/setlistfm/: openapi-setlistfm.json  request-token.http
src/apim/spotify/: README.md  policy-spotify.xml
src/common/: telemetry.py
src/sample-mcp-server/: Dockerfile  minimal_mcp_example.py  pyproject.toml
src/setlist-agent/: Dockerfile  README.md  agent.py  basic_agent.py  bing.py  chainlit.md  chainlit.toml  config.py  enhanced_agent.py  main.py  mcp_sample.py  pyproject.toml  requirements.txt  sample_agents_basics_with_azure_monitor_tracing copy.py  sample_agents_basics_with_azure_monitor_tracing.py  sample_agents_mcp.py  spike.py  spotify_auth.py
src/setlist-agent/.chainlit/: config.toml
src/setlistfm-agent/: .dockerignore  .env.example  Dockerfile  README.md  api.http  configuration.py  main.py  openapi-setlistfm.json  pyproject.toml  requirements.txt  setlistfm_agent.py  test_agent.py
src/setlistfm-mcp-server/: .env.sample  Dockerfile  README.md  configuration.py  mcp_client.py  pyproject.toml  setlistfm.py  setlistfm2.py  test_mcp_client.py
src/spotify-mcp-server/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  auth.py  configuration.py  mcp_client.py  mcp_oauth.py  mcp_server.py  minimal.py  pyproject.toml  spotify.py  start_mcp_server.sh
src/weather-mcp-server/: Dockerfile  api_key_auth.py  main.py  pyproject.toml  weather.py
