[project]
name = "setlist-agent"
version = "0.1.0"
description = "Semantic Kernel ACA microservice for setlist and spotify MCP orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "semantic-kernel>=1.35.3",
    "semantic-kernel[mcp]",
    "semantic-kernel[azure]",
    "uvicorn",
    "azure-monitor-opentelemetry",
    "azure-ai-projects",
    "azure-ai-inference",
    "azure-ai-agents",
    "aiohttp",
    "azure-identity",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-openai",
    "opentelemetry-instrumentation-asyncio",
    "azure-core-tracing-opentelemetry",
    "chainlit>=2.7.0",
    "spotipy",
    "python-dotenv",
    "azure-monitor-opentelemetry-exporter"
]
