[project]
name = "setlistfm-agent"
version = "0.1.0"
description = "AI Foundry SDK agent for setlist content management with Bing Grounding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "fastmcp",
    "httpx",
    "uvicorn",
    "azure-ai-projects",
    "azure-ai-agents", 
    "azure-identity",
    "azure-monitor-opentelemetry",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncio",
    "opentelemetry-instrumentation-openai-v2",
    "azure-core-tracing-opentelemetry",
    "azure-monitor-opentelemetry",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "jsonref",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
