[project]
name = "spotify-mcp-server"
version = "0.1.0"
description = "MCP server exposing Spotify API via Spotipy"
authors = ["Benoit Moussaud <your.email@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "spotipy",
    "httpx>=0.28.1",
    "fastmcp>=2.9.0",
    "azure-monitor-opentelemetry",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-starlette",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-propagator-b3",
    "opentelemetry-propagator-jaeger"
]

[tool.setuptools.packages.find]
where = ["."]
